apps/prod/kulinaryos-v1-proxy/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: institutional-redirect-https
  namespace: kulinaryos
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: institutional-compress
  namespace: kulinaryos
spec:
  compress: {}
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: institutional-www-to-apex
  namespace: kulinaryos
spec:
  redirectRegex:
    regex: ^https://www\.kulinaryos\.com/(.*)
    replacement: https://kulinaryos.com/${1}
    permanent: true
