apps/prod/kulinaryos-v1-proxy/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kulinaryos-v1
  labels:
    app.kubernetes.io/part-of: kulinaryos
    environment: production
