apps/prod/kulinaryos-v1-proxy/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kulinaryos-v1-http
  namespace: kulinaryos
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`kulinaryos.com`) || Host(`www.kulinaryos.com`)
      kind: Rule
      middlewares:
        - name: institutional-redirect-https
      services:
        - name: kulinaryos-institutional
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kulinaryos-v1-https
  namespace: kulinaryos
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.kulinaryos.com`)
      kind: Rule
      priority: 20
      middlewares:
        - name: institutional-www-to-apex
      services:
        - name: kulinaryos-institutional
          port: 80
    - match: Host(`kulinaryos.com`)
      kind: Rule
      middlewares:
        - name: institutional-compress
      services:
        - name: kulinaryos-institutional
          port: 80
          passHostHeader: true
  tls:
    secretName: kulinaryos-com-tls
