apps/prod/kulinaryos-v1-proxy/relay-route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kulinaryos-v1-relay-hotfix
  namespace: kulinaryos-v1
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kulinaryos.com`) || Host(`www.kulinaryos.com`)
      kind: Rule
      priority: 1000
      middlewares:
        - name: compress
      services:
        - name: wordpress-relay-nginx
          port: 80
          scheme: http
          passHostHeader: true
  tls:
    secretName: kulinaryos-com-tls
